--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">117,511</td><td></td><td></td></tr>
+<tr><th colspan="7">Orange HRM Application Test Automation Test Suite</th></tr>
+<tr><td><a href="#t0">Organge HRM Test Cases</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">109,230</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.orangehrm.tests.AddEmployeeTest</td><td><a href="#m0">verifyAddEmployee</a></td><td rowspan="1">1544347129317</td><td rowspan="1">15861</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Orange HRM Application Test Automation Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Organge HRM Test Cases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.orangehrm.tests.AddEmployeeTest</td><td><a href="#m0">verifyAddEmployee</a></td><td rowspan="1">1545911087045</td><td rowspan="1">18622</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.orangehrm.tests.AddEmployeeTest#verifyAddEmployee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Organge HRM Test Cases</h2><h3 id="m0">com.orangehrm.tests.AddEmployeeTest#verifyAddEmployee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
